Quick CSS fix to prevent game-meta boxes from overflowing into page contents

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1254,7 +1254,12 @@ Version:  2.0
   float: left;
   padding: 0 20px;
   border-right: 1px solid #f2f3f5;
+  max-width: 375px; 
+  overflow:hidden; 
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
 /* 2. Fonts  -------------------------------------------------------*/
 h1,
 h2 {
